GUI for picking a location on the robot
next milestone: turn these locations into position commands; send to the robot.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.avi
 *.weights
 yolo-balls/*
-.vs/VSWorkspaceState.json
-.vs/slnx.sqlite
-.vs/LAX_2023/v16/.suo
+.vs/*
+python_gui/.vs/*
+python_gui/code/.vs/*
+*.pyc
