UI: websocket connection established
required the server (Python code) having knowledge of the JS script's location, and connecting to "ws://localhost:81/ws", not localhost = window.hostname.location and connecting to "ws://" + localhost + ":81/ws"

code is in the "sean_webtest" folder

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ python_gui/code/.vs/*
 **\.vs\*
 *.pb
 *.pbtxt
+User_Interface/sean_webtest/.vs/ProjectSettings.json
+User_Interface/sean_webtest/.vs/slnx.sqlite
