--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ python_gui/code/.vs/*
 *.pbtxt
 User_Interface/sean_webtest/.vs/ProjectSettings.json
 User_Interface/sean_webtest/.vs/slnx.sqlite
+.DS_Store
+User_Interface/.DS_Store
