Improve README and update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,18 @@
-#certifi==2020.6.20
-#cycler==0.10.0
-#DateTime==4.3
-#imutils==0.5.3
-#kiwisolver==1.2.0
-#matplotlib==3.3.1
-#numpy==1.19.1
-#opencv-contrib-python
-#opencv-python
-#pandas==1.1.0
-#Pillow==7.2.0
-#pyparsing==2.4.7
-#python-dateutil==2.8.1
-#pytz==2020.1
-#scipy==1.5.2
-#six==1.15.0
-#zope.interface==5.1.0
-
-certifi
-cycler
-DateTime
-imutils
-kiwisolver
-matplotlib
-numpy
-opencv-contrib-python
-opencv-python
-pandas
-Pillow
-pyparsing
-python-dateutil
-pytz
-scipy
-six
-zope.interface
+contourpy==1.1.1
+cycler==0.12.1
+fonttools==4.43.1
+imutils==0.5.4
+kiwisolver==1.4.5
+matplotlib==3.8.0
+modern-robotics==1.1.1
+numpy==1.26.0
+opencv-python==4.8.1.78
+packaging==23.2
+pandas==2.1.1
+Pillow==10.1.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+scipy==1.11.3
+six==1.16.0
+tzdata==2023.3
